JsonNewStartPoint
