# services/api/swagger.json
@@ -7653,7 +7653,7 @@
             "description": "The start point for the new branch. All branch versions from the start point branch will be shallow copied over to the new branch. That is, all historical metrics data for the start point branch will appear in queries for the new branch. For example, pull request branches often use their base branch as their start point branch. After the new branch is created, it is not kept in sync with the start point branch. If not provided, the new branch will have no historical data.",
             "allOf": [
               {
-                "$ref": "#/components/schemas/JsonStartPoint"
+                "$ref": "#/components/schemas/JsonNewStartPoint"
               }
             ]
           }
@@ -7931,6 +7931,36 @@
           "results",
           "start_time",
           "testbed"
+        ]
+      },
+      "JsonNewStartPoint": {
+        "type": "object",
+        "properties": {
+          "branch": {
+            "description": "The UUID, slug, or name of the branch to use as the start point.",
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/NameId"
+              }
+            ]
+          },
+          "hash": {
+            "nullable": true,
+            "description": "The full Git hash of the branch to use as the start point.",
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/GitHash"
+              }
+            ]
+          },
+          "thresholds": {
+            "nullable": true,
+            "description": "If set to `true`, the thresholds from the start point branch will be deep copied to the new branch. This can be useful for pull request branches that should have the same thresholds as their target branch.",
+            "type": "boolean"
+          }
+        },
+        "required": [
+          "branch"
         ]
       },
       "JsonNewTestbed": {
@@ -9118,36 +9148,6 @@
         ]
       },
       "JsonSpec": {},
-      "JsonStartPoint": {
-        "type": "object",
-        "properties": {
-          "branch": {
-            "description": "The UUID, slug, or name of the branch to use as the start point.",
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/NameId"
-              }
-            ]
-          },
-          "hash": {
-            "nullable": true,
-            "description": "The full Git hash of the branch to use as the start point.",
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/GitHash"
-              }
-            ]
-          },
-          "thresholds": {
-            "nullable": true,
-            "description": "If set to `true`, the thresholds from the start point branch will be deep copied to the new branch. This can be useful for pull request branches that should have the same thresholds as their target branch.",
-            "type": "boolean"
-          }
-        },
-        "required": [
-          "branch"
-        ]
-      },
       "JsonStats": {
         "type": "object",
         "properties": {
